--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "type": "module",
   "workspaces": [
     "src/siwcb_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/agent": "^2.4.1",
+    "@dfinity/identity": "^2.4.1"
+  }
 }
