--- a/src/siwcb_frontend/tsconfig.json
+++ b/src/siwcb_frontend/tsconfig.json
@@ -4,9 +4,10 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
+    "checkJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -15,8 +16,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["vite/client"]
+    "types": ["svelte", "vite/client", "@sveltejs/kit"],
+    "jsx": "preserve"
   },
   "include": ["src"]
 }
